@@ -11,7 +11,6 @@ class TestSPARQLStoreGraphCore(unittest.TestCase):
     def setUp(self):
         self.graph = Graph(store="SPARQLStore")
         self.graph.open(self.path, create=self.create)
-        self.graph.store.baseURI = self.path
         ns = list(self.graph.namespaces())
         assert len(ns) > 0, ns
 
